# rust-authorization

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  compose.yml
entity/: Cargo.toml
entity/src/: blacklist.rs  lib.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_users_table.rs  m20230925_171728_create_blacklist_table.rs
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: rust_auth.conf
scripts/: entrypoint.sh  install.sh
src/: auth.rs  main.rs
src/auth/: methods.rs  mod.rs  routes.rs
src/utils/: authorize.rs  jwt.rs  mod.rs  validation.rs
