# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"
"actix-cors" = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15.7"
serde_json = "1.0.107"
argon2 = { version = "0.5.2", features = ["password-hash"] }
jsonwebtoken = "8.3.0"
display_json = "0.2.1"
actix-web-lab = "0.19.1"
actix-http = "3.4.0"
chrono = "0.4.31"
